* NEW:
   * Audio visualizer waveform filled - thx jdpurcell
* FIXED:
   * Fixed crash in "Visual sync" - thx aMvEL / Bolshevik
   * Fixed "Fix common errors in selected lines" - thx ingo
   * Fixed audio visualizer "Seek silence" - thx jdpurcell
   * Fixed audio visualizer "Guess time codes" - thx jdpurcell
   * Fixed possible startup crash with tiny or bad video file - thx ttvd94
   * Fixed line splitter regarding unicode 8242 char


3.4.9 (3rd October 2015)
* NEW:
   * New subtitle formats (XIF xml, Jetsen, NCI Timed Roll Up Captions and more)
   * Ukrainian translation - thx Maximaximum
   * Option to play a sound when new network message arrives - thx InCogNiTo124
* IMPROVED:
   * Updated Portuguese translation - thx moob
   * Updated Korean translation - thx domddol
   * Updated French language file - thx JM GBT/xylographe
   * Updated Hungarian translation - thx Zityi
   * Updated Dutch translation - thx xylographe
   * Updated German translation - thx xylographe
   * Updated Romanian translation - thx Mircea
   * Updated Polish translation - thx admas
   * Updated Croatian OCR fix replace list - thx diomed & xylographe
   * Generating of spectrogram is now *many* times faster - thx jdpurcell
   * SubtitleListView: Enable double buffering to eliminate flickering - thx jdpurcell
   * Added "Count" to "Find" dialog - thx ivandrofly
   * FFMPEG audio extraction will now prompt for audio file if more than one
   * Format PAC now includes "Chinese simplified" - thx Man
   * Merge lines with same text now ignores casing - thx Michel
   * Now keeps blank lines inside SubRip texts
   * Better Croatian/Serbian language detection - thx aaaxx/xylographe
   * Sync tools now display info about what is applied (factor and -/+ adjustment)
   * Plugins are now allowed to return another format than SubRip
   * Better resizing of list view in "Bridge gaps in durations" - thx ivandrofly
   * Audio visualizer: don't generate wav if source is already wav - thx MM